# nlt-panel

./: .gitignore  .pjt  .snyk  README.md  config.h.example  fiveserver.config.js  index.html  instructable.md  nlt-panel.ino  package-lock.json  package.json  styles.css  test.js  test.py
.github/files/: print_caps_secondary.stl
.github/workflows/: firmware-test.yml  visualizer-release.yml  visualizer-test.yml
app/: index.html  main.js  renderer.js
app/models/: panel.fbx
files/: Caps 2 Test v2.stl  Print Caps v9.stl  Print Hexagons v6.stl
firmware/: platformio.ini
firmware/include/: config.example.h  config.h.example  constants.cpp  constants.h  constants.hpp  font.h  font.hpp  settings.hpp
firmware/src/: main.cpp
ino/: F1WWWLLJTT5L8PM.ino  FOHAXC7JTT5L8Q7.ino  FOJRLEOJTT5L8QB.ino  FV5T6G2JTT5L8OV.ino  timeWhiteBackgroundRainbow F0LDX5DJTT5L8IY.ino
js/: grid.js  renderer.js  three.js  three_obj.js
nlt-panel/: .gitignore  platformio.ini
nlt-panel-esp/: nlt-panel-esp.ino
nlt-panel-visualizer/: package.json
nlt-panel-visualizer/src/: index.html
nlt-panel-visualizer/src-tauri/: Cargo.toml  tauri.conf.json
nlt-panel/include/: config.h  config.h.example  constants.cpp  constants.h  font.h
nlt-panel/src/: main.cpp
src/: nlt-panel.cpp
tools/sim/: index.html  main.js  renderer.js  simulation.js
tools/simulation/: index.html  renderer.js
tools/simulation_v2/: renderer.js  (+1 more)
visualizer/: package.json  pnpm-lock.yaml
visualizer/src-tauri/: Cargo.toml  tauri.conf.json
visualizer/src-tauri/icons/: icon.icns
visualizer/src-tauri/src/: main.rs
(+33 files in other folders)
