[package]
name = "nlt-panel-visualizer"
version = "4.1.1"
description = "NLT Panel Visualizer"
authors = ["Prutsor <prutsor@prutsor.nl>"]
license = ""
repository = "https://github.com/Prutsor/nlt-panel-4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = ["fs-read-file", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0"
mdns-sd = "0.9.2"

[target.'cfg(windows)'.dependencies]
window-vibrancy = "0.4.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
